force-app/main/default/objects/XactlyExpress__XCReleaseData__c/XactlyExpress__XCReleaseData__c.object-meta.xml
<CustomObject>
    <label>XCReleaseData</label>
    <nameField>
        <label>XCReleaseData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCReleaseData</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>