force-app/main/default/objects/XactlyExpress__XCReleaseData__c/fields/XactlyExpress__DealExtra2__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DealExtra2__c</fullName>
    <label>DealExtra2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>