force-app/main/default/objects/XactlyExpress__XCReleaseData__c/fields/XactlyExpress__DealKey3__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DealKey3__c</fullName>
    <label>DealKey3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>