force-app/main/default/objects/XactlyExpress__XCReleaseData__c/fields/XactlyExpress__DealKey4__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DealKey4__c</fullName>
    <label>DealKey4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>