force-app/main/default/objects/XactlyExpress__XCReleaseData__c/fields/XactlyExpress__ProcessID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProcessID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProcessID</label>
    <referenceTo>XactlyExpress__XCProcess__c</referenceTo>
    <relationshipLabel>XCReleaseData</relationshipLabel>
    <relationshipName>XCReleaseData</relationshipName>
    <type>Lookup</type>
</CustomField>