force-app/main/default/objects/XactlyExpress__XCReleaseData__c/fields/XactlyExpress__ProrateCredit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProrateCredit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ProrateCredit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>