force-app/main/default/objects/XactlyExpress__XCReleaseData__c/fields/XactlyExpress__ResultsCount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ResultsCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ResultsCount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>