force-app/main/default/objects/XactlyExpress__XCReleaseData__c/fields/XactlyExpress__Usage__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Usage__c</fullName>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>AdjustRelease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>